--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,22 @@
+
 {
-  "name": "NextStop – Conexões no Metrô e CPTM",
+  "name": "NextStop",
   "short_name": "NextStop",
-  "description": "App para conhecer pessoas, fazer amizades, paqueras e networking nos trens e metrô de São Paulo",
-  "start_url": "/next/",
-  "scope": "/next/",
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#050816",
+  "background_color": "#ff2f7a",
   "theme_color": "#ff2f7a",
   "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
