--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,22 @@
 {
-  "name": "NextStop",
+  "name": "NextStop - Conexões no Metrô e CPTM",
   "short_name": "NextStop",
-  "start_url": "index.html",
+  "description": "Faça amizades, paqueras e networking nas estações de metrô e CPTM de São Paulo.",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ff2f7a",
+  "orientation": "portrait",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "icons/icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
